testdata/de/dm/intellij/liferay/language/jsp/LiferayTaglibDeprecationInspectionTest/asset-categories-navigation.jsp
<%@ taglib uri="http://liferay.com/tld/ui" prefix="liferay-ui" %>

<warning descr="Removed the liferay-ui:asset-categories-navigation Tag and Replaced with liferay-asset:asset-categories-navigation. (see LPS-60753)"><liferay-ui:<error descr="Cannot resolve symbol 'liferay-ui:asset-categories-navigation'">asset-categories-navigation</error> /></warning>
